changes name of project from json-server-circle-of-excuses to circle-of-excuses

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-server-circle-of-excuses",
+  "name": "circle-of-excuses",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
